tests/suite/snapshots/suite__check__tests__check__bad_nested_array.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_nested_array.xi:2:5]
   │
 2 │     i:bool[][] = {{}, {1}}
   ·     ─────┬────  
   ·          ╰────── Expected bool[][] but found int[][]
───╯

